--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Inventory App</string>
+    <string name="quantity">Quantity: %1$d</string>
+    <string name="sale">sale</string>
+    <string name="price">Price: %1$d</string>
+    <string name="action_insert_dummy_data">insert dummy data</string>
 </resources>
